{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 61,
  "lineage": "014ccbae-411e-ea27-ee17-bc8d391c9eef",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/appNic",
            "internal_domain_name_suffix": "4qgpnowau5xevbmsvse3m3qtng.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "appNic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-grp"
          },
          "dependencies": [
            "azurerm_subnet.app",
            "azurerm_virtual_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "3389"
                ],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/InternalHTTPS",
            "name": "InternalHTTPS",
            "network_security_group_name": "app-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "app-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/app-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "app-public-ip",
            "resource_group_name": "app-grp",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet01",
            "name": "appsubnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_virtual_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/websubnet01",
            "name": "websubnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app-network"
          },
          "dependencies": [
            "azurerm_virtual_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Appsubnet01_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet01",
            "network_security_group_id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_subnet.app",
            "azurerm_virtual_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Websubnet01_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/websubnet01",
            "network_security_group_id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/websubnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_subnet.web",
            "azurerm_virtual_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "baf60cf4-a7c0-4aee-8592-ac89d676136e",
            "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network",
            "location": "westeurope",
            "name": "app-network",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/websubnet01",
                "name": "websubnet01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app-network/subnets/appsubnet01",
                "name": "appsubnet01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/1b2003fc-5952-448e-92f8-01383f5b9c95/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              }
            ]
          }
        }
      ]
    }
  ]
}